openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest-quarkus-example
  namespace: quarkus-test
spec:
  selector:
    matchLabels:
      app: httpd
  replicas: 2
  template:
    metadata:
      labels:
        app: httpd
    spec:
      containers:
        - name: httpd
          image: >-
            andreychukhlebov/rest-quarkus:1.1
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /q/health/live
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /q/health/ready
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
