openshift/service-node.yaml
apiVersion: v1
kind: Service
metadata:
  name: example1
  namespace: quarkus-test
spec:
  type: NodePort
  selector:
    app: httpd
  ports:
    - protocol: TCP
      port: 8080
      nodePort: 30123
      targetPort: http
#http - ссылка на containerPort: 8080
