openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example
  namespace: quarkus-test
spec:
  selector:
    app: httpd
  ports:
    - protocol: TCP
      port: 8080
      targetPort: http
#http - ссылка на containerPort: 8080
