openshift/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  namespace: quarkus-test
spec:
  tls:
  – hosts:
    – example-ingress-quarkus-test.apps-crc.testing
  secretName: tls-secret
  rules:
    - host: example-ingress-quarkus-test.apps-crc.testing
      http:
        paths:
          - path: /
            backend:
              serviceName: example
              servicePort: 8080
