openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: example
  namespace: quarkus-test
spec:
  path: /
  to:
    kind: Service
    name: example
  port:
    targetPort: 8080
